--- a/assets/css/_variables.css
+++ b/assets/css/_variables.css
@@ -14,8 +14,10 @@ html, body{
 :root{
     --primary-color: #4458dc;
     --primary-color2: #854fee;
+    --primary-color3: #cf455c;
     --title-color: #141313;
     --text-color: #777777;  
+    --text-color2: #ffffff;  
     --border-color: #201f1f17;  
     --gradient-color: linear-gradient(90deg, #4458dc 0%, #854fee 100%);
     --shadow-color:  0px 10px 30px rgba(118, 85, 225, 0.3);
@@ -23,5 +25,7 @@ html, body{
    
 
     /* font family variables. */ 
-    --roboto: 'Roboto', cursive;
+    --rbt: 'Roboto', cursive;
+    --mnt: 'Montserrat', cursive;
+    --os: 'Oswald', cursive;
 } 
