--- a/assets/css/fonts.css
+++ b/assets/css/fonts.css
@@ -1,15 +1,12 @@
 
 
-/* @font-face */ 
+/* Roboto */ 
 
-@font-face{
-    font-family: "Roboto";
-    src: '../vendor/fonts/Roboto/Roboto-Regular.ttf';
-}
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap');
+
+/* Montserrat */
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,600,700&display=swap');
 
 
-@font-face{
-    font-family: "FontAwesome";
-    src: '../icons/fa-regular-400.ttf';
-}
-
+/* Oswald */
+@import url('https://fonts.googleapis.com/css?family=Oswald:400,500,600,700&display=swap');
