--- a/assets/css/_global.css
+++ b/assets/css/_global.css
@@ -95,3 +95,19 @@ button:hover
 body{
     background-image: url('../images/bg-body.jpg');
 }
+
+#container{
+    margin: 0 auto;
+    width: 860px;
+    margin-bottom: 20px;
+    margin-top: 30px;
+}
+
+#content{
+    background-color: white;
+}
+
+a,
+a:hover{
+    text-decoration: none;
+}
