--- a/assets/css/_variables.css
+++ b/assets/css/_variables.css
@@ -1,25 +1,39 @@
 
 
 
-html, body{
+/* html, body{
     margin: 0%;
     box-sizing: border-box;
     width: 100%;
     height: 100%;
-}
+} */
 
 
 /* CSS Variables */ 
 
 :root{
-    --primary-color: #4458dc;
-    --primary-color2: #854fee;
-    --primary-color3: #cf455c;
+    --primary-color: #2c3e50;
+    --primary-color2: #2f3640;
+    --primary-color3: #192a56;
+    --primary-color4: #cf455c;
+    --primary-color5: #ededed;
+    --primary-color6: #fbfbfb;
+    --primary-color7: #777;
+
     --title-color: #141313;
+    --title-color2: #555;
+    --title-color3: #3a3a3a;
+    --title-color4: #999;
+
     --text-color: #777777;  
     --text-color2: #ffffff;  
-    --border-color: #201f1f17;  
-    --gradient-color: linear-gradient(90deg, #4458dc 0%, #854fee 100%);
+    --text-color3: #b9b9b9;
+    --text-color4: #333;
+
+    --border-color: #e5e5e5;  
+    --border-color2: #e5e5e5;
+    --border-color3: #2c3e50;
+
     --shadow-color:  0px 10px 30px rgba(118, 85, 225, 0.3);
     --box-shadow: 0px 10px 30px rgba(57, 56, 61, 0.205);
    
