--- a/assets/css/_variables.css
+++ b/assets/css/_variables.css
@@ -9,6 +9,7 @@
   --primary-color5: #ededed;
   --primary-color6: #fbfbfb;
   --primary-color7: #777;
+  --primary-color8: #fdfdfd;
   --title-color: #141313;
   --title-color2: #555;
   --title-color3: #3a3a3a;
@@ -20,10 +21,11 @@
   --border-color: #e5e5e5;
   --border-color2: #e5e5e5;
   --border-color3: #2c3e50;
+  --border-color4: #cccccc;
+  --border-color5: #ced4da;
   --shadow-color: 0px 10px 30px rgba(118, 85, 225, 0.3);
   --box-shadow: 0px 10px 30px rgba(57, 56, 61, 0.205);
   /* font family variables. */
-  --rbt: 'Roboto', cursive;
-  --mnt: 'Montserrat', cursive;
-  --os: 'Oswald', cursive;
+  --roboto: 'Roboto', sans-serif;
+  --oswald: 'Oswald', sans-serif;
 }
